--- a/m3/w2/d5-progetto/todo-project/src/app/app.component.scss
+++ b/m3/w2/d5-progetto/todo-project/src/app/app.component.scss
@@ -3,6 +3,19 @@ h1{
   width: fit-content;
 }
 
+.todo-form{
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  justify-content: space-between;
+}
+
+.todo-form input{
+
+  width: 80%;
+
+}
+
 .container{
   margin: 0 auto;
   width: 30vw;
