--- a/m3/w3/d5-Progetto/Angular1/src/app/login/login.component.html
+++ b/m3/w3/d5-Progetto/Angular1/src/app/login/login.component.html
@@ -1,1 +1,40 @@
-<p>login works!</p>
+<div class="login-form-cont">
+  <mat-card class="example-card">
+    <mat-card-header>
+
+      <mat-card-title>Login</mat-card-title>
+
+    </mat-card-header>
+
+    <mat-card-content>
+          <form action="" method="get">
+            <mat-form-field appearance="outline">
+              <mat-label>Email</mat-label>
+              <input type="email" name="email" formControlName="email" matInput placeholder="mario@mario.com">
+            </mat-form-field>
+
+            <mat-form-field appearance="outline">
+              <mat-label>Password</mat-label>
+              <input type="password" name="password" formControlName="password" matInput placeholder="password">
+            </mat-form-field>
+          </form>
+
+          <button style="margin-left: 8px;" mat-raised-button color="primary"  >Login</button>
+
+          <div style="margin-top: 20px ;">
+            <h5 class="mt-3 ms-2 fw-normal"> If you don't have an account, please
+              <button routerLink='/register' style="color: rgb(158, 6, 158) ;">Sign-up</button>
+            </h5>
+          </div>
+
+
+
+    </mat-card-content>
+
+
+
+  </mat-card>
+</div>
+
+
+
