--- a/m3/w3/d5-Progetto/Angular1/src/app/register/register.component.html
+++ b/m3/w3/d5-Progetto/Angular1/src/app/register/register.component.html
@@ -7,16 +7,16 @@
     </mat-card-header>
 
     <mat-card-content>
-          <form action="" method="get">
+          <form [formGroup]="signupForm" (ngSubmit)="signUp()"  action="" method="get">
 
             <mat-form-field appearance="outline">
               <mat-label>Full Name</mat-label>
-              <input type="text" name="name" formControlName="name" matInput placeholder="Full name">
+              <input type="text" name="name" formControlName="fullname" matInput placeholder="Full name">
             </mat-form-field>
 
             <mat-form-field appearance="outline">
               <mat-label>Mobile Number</mat-label>
-              <input type="text" name="number" formControlName="number" matInput placeholder="+39- 000 0000000">
+              <input type="number" name="number" formControlName="mobile" matInput placeholder="+39- 000 0000000">
             </mat-form-field>
 
             <mat-form-field appearance="outline">
@@ -30,9 +30,9 @@
             </mat-form-field>
           </form>
 
-      <button style="margin-left: 8px;" mat-raised-button color="primary"  >Sign up</button>
+      <button style="margin-left: 8px;" mat-raised-button color="primary" (click)="signUp()" >Sign up</button>
       <div style="margin-top: 20px ;">
-        <h5 class="mt-3 ms-2 fw-normal"> If are already registered go to
+        <h5 class="mt-3 ms-2 fw-normal"> If you are already registered go to
           <button routerLink='/login' style="color: rgb(158, 6, 158) ;">Login</button>
         </h5>
       </div>
