manca autenticazione!da fare!

--- a/m3/w3/d5-Progetto/Angular1/src/app/app.component.html
+++ b/m3/w3/d5-Progetto/Angular1/src/app/app.component.html
@@ -10,14 +10,15 @@
 
   </mat-menu>
 
-  <button mat-button [routerLink]="['blog']">Blog</button>
+
   <mat-menu >
 
   </mat-menu>
 
     <span class="example-spacer"></span>
-    <button class="register-button" style="margin-right: 2px ;" mat-raised-button color="success" [routerLink]="['register']" >Sign-up</button>
-    <button class="login-button" mat-raised-button color="warn" [routerLink]="['login']" >Login</button>
+    <button class="register-button"  style="margin-right: 2px ;" mat-raised-button color="success" [routerLink]="['register']" >Sign-up</button>
+    <button class="login-button"  mat-raised-button color="warn" [routerLink]="['login']" >Login</button>
+    <!--<button class="logout-button" mat-raised-button color="warn" [routerLink]="['login']" >Logout</button>-->
 
   </mat-toolbar>
 
