--- a/m3/w3/d5-Progetto/Angular1/src/app/register/register.component.html
+++ b/m3/w3/d5-Progetto/Angular1/src/app/register/register.component.html
@@ -16,7 +16,7 @@
 
             <mat-form-field appearance="outline">
               <mat-label>Mobile Number</mat-label>
-              <input type="number" name="number" formControlName="mobile" matInput placeholder="+39- 000 0000000">
+              <input type="text" name="number" formControlName="mobile" matInput placeholder="+39- 000 0000000">
             </mat-form-field>
 
             <mat-form-field appearance="outline">
