--- a/m3/w3/d5-Progetto/Angular1/src/app/login/login.component.html
+++ b/m3/w3/d5-Progetto/Angular1/src/app/login/login.component.html
@@ -11,17 +11,23 @@
             <mat-form-field appearance="outline">
               <mat-label>Email</mat-label>
               <input type="email" name="email" formControlName="email" matInput placeholder="mario@mario.com">
+              <mat-hint  style="color: red ;">*Email is required</mat-hint>
             </mat-form-field>
+
 
 
             <mat-form-field appearance="outline">
               <mat-label>Password</mat-label>
               <input type="password" name="password" formControlName="password" matInput placeholder="password">
+              <mat-hint  style="color: red ;">*Password is required</mat-hint>
             </mat-form-field>
+
 
           </form>
 
-          <button style="margin-left: 8px;" mat-raised-button color="primary" (click)="login()" >Login</button>
+
+
+          <button  style="margin-left: 8px; margin-top: 40px;" mat-raised-button color="primary" (click)="login()" >Login</button>
 
           <div style="margin-top: 20px ;">
             <h5 class="mt-3 ms-2 fw-normal"> If you don't have an account, please
